<resources>
    <string name="app_name">ShoesStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_with_existing_email">Login With Existing Email</string>
    <string name="login_with_new_email">Login With New Email</string>
    <string name="welcome_message">Welcome Message</string>
    <string name="welcome_user">Welcome User</string>
    <string name="have_a_nice_shopping_experience_with_shoe_store_app_and_better_offers">Have a nice shopping experience with Shoe store app and better offers</string>
    <string name="next">Next</string>
    <string name="start_online_shopping">Start Online Shopping</string>
    <string name="enjoy_with_the_best_online_shopping_experience_and_great_offers_in_our_app_with_a_huge_love_services">Enjoy with the best online shopping experience and great offers in our app with a huge love services</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="size_20">Size : 20</string>
    <string name="name">Name</string>
    <string name="size">size</string>
    <string name="emptySize">0.0</string>
    <string name="company">Company</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
</resources>